docs/grammar.ebnf
program        = {declaration}, EOF ;

declaration    = classDecl | funDecl | varDecl | statement ;

(* Note class functions are defined without the `fun` keyword *)
classDecl      = "class", IDENTIFIER, [ "<", IDENTIFIER ], "{", { function }, "}" ;
funDecl        = "fun", function ;
varDecl        = "var", IDENTIFIER, [ "=", expression ], ";" ;
statement      = exprStmt | ifStmt | printStmt | returnStmt | whileStmt | forStmt | block ;

(* Rules related to functions.  Note `function` defines the body of a function declaration,
whereas `call` represents a function call expression. *)
function       = IDENTIFIER, "(", [ parameters ], ")", block ;
parameters     = IDENTIFIER, { ",", IDENTIFIER } ;
arguments      = expression, { ",", expression } ;

(* Rules related to statements. *)
exprStmt       = expression, ";" ;

(* Bodies of if (both branches), while, and for statements can be any statement, not just blocks. *)
ifStmt         = "if", "(", expression, ")", statement, [ "else", statement ] ;
printStmt      = "print", expression, ";" ;
returnStmt     = "return", [ expression ], ";" ;
whileStmt      = "while", "(", expression, ")", statement ;
forStmt        = "for", "(", ( varDecl | exprStmt | ";" ), [ expression ], ";", [ expression ], ")", statement ;
block          = "{", { declaration }, "}" ;

(* Rules related to expressions. *)
expression     = assignment ;
assignment     = [ call, "." ], IDENTIFIER, "=", assignment | logic_or ;
logic_or       = logic_and, { "or", logic_and } ;
logic_and      = equality, { "and", equality } ;

equality       = comparison, { ( "!=" | "==" ), comparison } ;
comparison     = term, { ( ">" | ">=" | "<" | "<=" ), term } ;
term           = factor, { ( "-" | "+" ), factor } ;
factor         = unary, { ( "/" | "*" ), unary } ;
unary          = ( "!" | "-" ), unary | call ;
call           = primary, { ( "(", [ arguments ], ")" ) | ( ".", IDENTIFIER ) } ;
primary        = NUMBER | STRING | "true" | "false" | "nil" | "(", expression, ")" |
                 IDENTIFIER | "this" | "super", "." , IDENTIFIER ;

(* Lexical rules *)
NUMBER        = DIGIT, { DIGIT }, [ ".", DIGIT, { DIGIT } ] ;
STRING        = '"', { ? any character but " ? }, '"' ;
IDENTIFIER    = ALPHA, { ALPHA | DIGIT | "_" } ;
DIGIT         = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
ALPHA         = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" |
                "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" |
                "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" |
                "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" ;
